# coq-modeling

./: .coverage  .coveragerc  .dockerignore  .gitignore  .gitmodules  ARTIFACT.md  Dockerfile  MAP.md  Makefile  README.md  assignment.json  conf.pkl-0613045428  conf.pkl-0613045605  deepspeed.json  final_split.yaml  higman2.ml  higman2.mli  mypy.ini  partial-assignments.json  pyproject.toml  quirks.txt  remember.txt  requirements.txt  temp_saved_file.py  test_new_pyclient.py  tmp.py
confs/: eval-premise.yaml  eval.yaml  fsdp_config.yaml  goal-data.yaml  lm-data.yaml  observe-proof.yaml  prove-whole.yaml  prove.yaml  rerank-data.yaml  rerank_train_dist.yaml  run-dev-whole.yaml  run-dev.yaml  test_proof.yaml  train_codellama.yaml  train_decoder.yaml  train_fid.yaml  train_goal.yaml  train_rerank.yaml  train_select.yaml
example-confs/data/: lm.yaml  premise.yaml  proof-vector-db.yaml  rerank.yaml  select.yaml
example-confs/eval/: coqstoq-test.yaml  premise.yaml  proofs.yaml
example-confs/observe/: premise.yaml
example-confs/run/: single.yaml
example-confs/slurm/: gpu8.yaml
example-confs/train/: decoder.yaml  fid.yaml  rerank.yaml  select.yaml
jobs/: arraytest.sh  eval.sh  install-opam.sh  nodetest.sh  run-gpus.sh  run-models.sh  run-proofs.sh  train-fid.sh
notebooks/: test-byt5.ipynb  test-code-llama.ipynb  test.ipynb  train_code_llama.ipynb
notebooks/data_management/: data_viz.ipynb  inspect.ipynb  proof_ret.ipynb
notebooks/evaluation/: coqstoq-analysis.ipynb  cross-tool.ipynb  debug.ipynb  eval.ipynb  human-proofs.ipynb  inspect_diff.ipynb  plot_eval.ipynb  premise_eval.ipynb  qualitative.ipynb  step_eval.ipynb  view_errors.ipynb
notebooks/goal_evaluation/: goal_eval.ipynb
notebooks/model_deployment/: proof_ret_metrics.ipynb
notebooks/premise_selection/: count_context_premises.ipynb  embed_viz.ipynb  eval_calcs.ipynb  plot_metrics.ipynb  (+1 more)
proof_maps/: val
reports/: lemma_synth.md
results/: graph2tac.json  proverbot-cutoff.json  rango-abl-best-first-beam.json  rango-abl-best-first-temp.json  rango-abl-first-step.json  rango-abl-intersect-final.json  rango-abl-intersect-no-lemma-final.json  rango-abl-intersect-no-lemma-random.json  rango-abl-intersect-no-proofs-final.json  rango-abl-intersect-no-proofs-random.json  rango-abl-intersect-no-retrieval-final.json  rango-abl-intersect-no-retrieval-random.json  rango-abl-intersect-random.json  rango-abl-no-lemmas.json  rango-abl-no-proofs.json  rango-abl-no-retrieval.json  rango-abl-prefix-cutoff.json  rango-abl-prefix-hybrid-cutoff.json  rango-cutoff.json  tactician-cutoff.json
scripts/: add_missing_data_points.py  add_sources.py  collect_small_evals.py  compare_repos.py  create_coqstoq_data_points.py  create_eval.py  create_repo_data_points.py  eval_coqhammer.py  eval_gpt.py  eval_stats.py  eval_tactician.py  gather_hashes.py  get_dependency_map.py  get_interfile_coqstoq_indices.py  get_violin_data.py  monitor.py  monitor_directory.py  move_data.py  ping.py  print_gpt_eval.py  replicate.py  run.py  run_eval.py  run_lemma_model.py  run_rango_file.py  run_thm.py  slurm_run_hammer.py  slurm_run_tactician.py  start_server.py  tmp.py  translate_graph2tac.py  translate_proverbot.py
slurm/: make_gpu_sbatch.py
splits/: commits.json  cutoff-8.18-gpt.json  cutoff-8.18-gpt.yaml  cutoff-8.18.json  cutoff-8.18.yaml  final-split.json  icse-off-rnd-intersect.json  official-split-conf.yaml  official-split-icse.json  official-split.json  random-split-conf.yaml  random-split-icse.json  random-split.json  time-split-old.json  unimath.json
src/: create_lm_dataset.py  dataset_file.py  jsonl_utils.py  lm_example.py  models.py  split_raw_data.py
switches/: README.md  eval-8.17.opam  eval-8.18.opam  eval-8.19.opam  eval.opam
tactician/: .docker.xauth  .gitignore  Dockerfile  README.md  modified-install-projects.sh
test/: suite.py
test-coq-projs/: aux_harder_example.v  even_odd.v  example.v  harder_example.v  lt_impl.v  lt_trans.v  min.v  min_superlist.v  test1.v  test2.v
test-data-points-new/: AbsInt-CompCert-MenhirLib-Automaton.v  AbsInt-CompCert-MenhirLib-Grammar.v  AbsInt-CompCert-backend-Debugvar.v  AbsInt-CompCert-backend-Tunneling.v  AbsInt-CompCert-cfrontend-SimplExpr.v  AbsInt-CompCert-lib-Decidableplus.v  AbsInt-CompCert-powerpc-Builtins1.v  coq-community-fourcolor-theories-initctree.v  coq-community-hoare-tut-partialhoarelogic.v  coq-community-hoare-tut-totalhoarelogic.v  coq-community-math-classes-categories-JMcat.v  coq-community-math-classes-categories-algebras.v  coq-community-math-classes-categories-categories.v  coq-community-math-classes-categories-dual.v  coq-community-math-classes-categories-empty.v  coq-community-math-classes-categories-functors.v  coq-community-math-classes-categories-orders.v  coq-community-math-classes-categories-setoids.v  coq-community-math-classes-categories-unit.v  coq-community-math-classes-categories-varieties.v  coq-community-math-classes-functors-constant.v  coq-community-math-classes-implementations-bool.v  coq-community-math-classes-implementations-fast_integers.v  coq-community-math-classes-implementations-nonneg_integers_naturals.v  coq-community-math-classes-implementations-nonneg_semiring_elements.v  coq-community-math-classes-implementations-positive_semiring_elements.v  coq-community-math-classes-implementations-stdlib_binary_integers.v  coq-community-math-classes-implementations-stdlib_binary_naturals.v  coq-community-math-classes-implementations-stdlib_rationals.v  coq-community-math-classes-interfaces-functors.v  coq-community-math-classes-interfaces-sequences.v  coq-community-math-classes-misc-propholds.v  coq-community-math-classes-orders-minmax.v  coq-community-math-classes-theory-categories.v  coq-community-math-classes-theory-forget_algebra.v  coq-community-math-classes-theory-forget_variety.v  coq-community-math-classes-theory-hom_functor.v  coq-community-math-classes-theory-monoid_normalization.v  coq-community-math-classes-theory-products.v  coq-community-math-classes-theory-ring_congruence.v  (+5 more)
visualization/: interact.js  show_proof_tree.py  tree.html
(+371 files in other folders)
