[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "coq-modeling"
version = "0.0.1"
dependencies = [
    "tqdm",
    "jsonlines",
    "pyyaml",
    "pytest",
    "hypothesis",
    "termcolor",
    "types-PyYAML",
    "types-requests",
    "black",
    "ipdb",
]

[tool.setuptools.packages.find]
where = ["src"]
