opam-version: "2.0"
compiler: ["ocaml-base-compiler.5.2.0"]
roots: [
  "coq.8.19.0"
  "coq-diaframe-heap-lang.dev.2024-02-21.0.9c606e4f"
  "coq-equations.1.3+8.19"
  "coq-iris.dev.2024-02-16.1.06f499e0"
  "coq-iris-heap-lang.dev.2024-02-16.1.06f499e0"
  "ocaml-base-compiler.5.2.0"
]
installed: [
  "base-bigarray.base"
  "base-domains.base"
  "base-nnp.base"
  "base-threads.base"
  "base-unix.base"
  "conf-gmp.4"
  "conf-linux-libc-dev.0"
  "conf-pkg-config.3"
  "coq.8.19.0"
  "coq-core.8.19.0"
  "coq-diaframe.dev.2024-02-21.0.9c606e4f"
  "coq-diaframe-heap-lang.dev.2024-02-21.0.9c606e4f"
  "coq-equations.1.3+8.19"
  "coq-iris.dev.2024-02-16.1.06f499e0"
  "coq-iris-heap-lang.dev.2024-02-16.1.06f499e0"
  "coq-stdlib.8.19.0"
  "coq-stdpp.dev.2024-02-09.0.cafd7113"
  "coqide-server.8.19.0"
  "dune.3.16.0"
  "host-arch-x86_64.1"
  "host-system-other.1"
  "ocaml.5.2.0"
  "ocaml-base-compiler.5.2.0"
  "ocaml-config.3"
  "ocaml-options-vanilla.1"
  "ocamlfind.1.9.6"
  "zarith.1.14"
]
pinned: "coq.8.19.0"
