opam-version: "2.0"
compiler: ["ocaml-base-compiler.5.2.0"]
roots: [
  "coq.8.19.0"
  "coq-diaframe-heap-lang.dev.2024-02-21.0.9c606e4f"
  "coq-equations.1.3+8.19"
  "coq-iris.dev.2024-02-16.1.06f499e0"
  "coq-iris-heap-lang.dev.2024-02-16.1.06f499e0"
  "coq-lsp.0.2.0+8.19"
  "ocaml-base-compiler.5.2.0"
]
installed: [
  "angstrom.0.16.1"
  "base.v0.17.1"
  "base-bigarray.base"
  "base-domains.base"
  "base-nnp.base"
  "base-threads.base"
  "base-unix.base"
  "bigstringaf.0.10.0"
  "cmdliner.1.3.0"
  "conf-gmp.4"
  "conf-linux-libc-dev.0"
  "conf-pkg-config.3"
  "coq.8.19.0"
  "coq-core.8.19.0"
  "coq-diaframe.dev.2024-02-21.0.9c606e4f"
  "coq-diaframe-heap-lang.dev.2024-02-21.0.9c606e4f"
  "coq-equations.1.3+8.19"
  "coq-iris.dev.2024-02-16.1.06f499e0"
  "coq-iris-heap-lang.dev.2024-02-16.1.06f499e0"
  "coq-lsp.0.2.0+8.19"
  "coq-stdlib.8.19.0"
  "coq-stdpp.dev.2024-02-09.0.cafd7113"
  "coqide-server.8.19.0"
  "cppo.1.7.0"
  "csexp.1.5.2"
  "dune.3.16.0"
  "dune-build-info.3.16.0"
  "dune-configurator.3.16.0"
  "host-arch-x86_64.1"
  "host-system-other.1"
  "jane-street-headers.v0.17.0"
  "jst-config.v0.17.0"
  "menhir.20240715"
  "menhirCST.20240715"
  "menhirLib.20240715"
  "menhirSdk.20240715"
  "num.1.5-1"
  "ocaml.5.2.0"
  "ocaml-base-compiler.5.2.0"
  "ocaml-compiler-libs.v0.17.0"
  "ocaml-config.3"
  "ocaml-options-vanilla.1"
  "ocaml-syntax-shims.1.0.0"
  "ocaml_intrinsics_kernel.v0.17.1"
  "ocamlfind.1.9.6"
  "parsexp.v0.17.0"
  "ppx_assert.v0.17.0"
  "ppx_base.v0.17.0"
  "ppx_cold.v0.17.0"
  "ppx_compare.v0.17.0"
  "ppx_derivers.1.2.1"
  "ppx_deriving.6.0.2"
  "ppx_deriving_yojson.3.9.0"
  "ppx_enumerate.v0.17.0"
  "ppx_globalize.v0.17.0"
  "ppx_hash.v0.17.0"
  "ppx_here.v0.17.0"
  "ppx_import.1.11.0"
  "ppx_inline_test.v0.17.0"
  "ppx_optcomp.v0.17.0"
  "ppx_sexp_conv.v0.17.0"
  "ppxlib.0.33.0"
  "ppxlib_jane.v0.17.0"
  "result.1.5"
  "seq.base"
  "sexplib.v0.17.0"
  "sexplib0.v0.17.0"
  "stdio.v0.17.0"
  "stdlib-shims.0.3.0"
  "stringext.1.6.0"
  "time_now.v0.17.0"
  "uri.4.4.0"
  "yojson.2.2.2"
  "zarith.1.14"
]
pinned: "coq.8.19.0"
