opam-version: "2.0"
compiler: ["ocaml.5.1.1"]
roots: [
  "coq.8.18.0"
  "coq-buchberger.8.18.0"
  "coq-coqeal.2.0.2"
  "coq-ext-lib.0.12.1"
  "coq-fourcolor.1.3.1"
  "coq-huffman.8.16.0"
  "coq-lsp.0.1.8+8.18"
  "coq-math-classes.8.19.0"
  "coq-qarith-stern-brocot.8.18.0"
  "coq-reglang.1.2.1"
  "coq-stalmarck.8.18.0"
  "coq-sudoku.8.16.0"
  "coq-zorns-lemma.10.2.0"
  "ocaml.5.1.1"
  "ocaml-base-compiler.5.1.1"
]
installed: [
  "angstrom.0.16.0"
  "atd.2.15.0"
  "atdgen.2.15.0"
  "atdgen-runtime.2.15.0"
  "atdts.2.15.0"
  "base.v0.16.3"
  "base-bigarray.base"
  "base-domains.base"
  "base-nnp.base"
  "base-threads.base"
  "base-unix.base"
  "bigstringaf.0.9.1"
  "biniou.1.2.2"
  "camlp-streams.5.0.1"
  "cmdliner.1.2.0"
  "conf-bash.1"
  "conf-gmp.4"
  "coq.8.18.0"
  "coq-bignums.9.0.0+coq8.18"
  "coq-buchberger.8.18.0"
  "coq-coqeal.2.0.2"
  "coq-core.8.18.0"
  "coq-elpi.2.0.0.1"
  "coq-ext-lib.0.12.1"
  "coq-fourcolor.1.3.1"
  "coq-hierarchy-builder.1.7.0"
  "coq-huffman.8.16.0"
  "coq-lsp.0.1.8+8.18"
  "coq-math-classes.8.19.0"
  "coq-mathcomp-algebra.2.2.0"
  "coq-mathcomp-bigenough.1.0.1"
  "coq-mathcomp-field.2.2.0"
  "coq-mathcomp-fingroup.2.2.0"
  "coq-mathcomp-finmap.2.1.0"
  "coq-mathcomp-multinomials.2.2.0"
  "coq-mathcomp-real-closed.2.0.0"
  "coq-mathcomp-solvable.2.2.0"
  "coq-mathcomp-ssreflect.2.2.0"
  "coq-paramcoq.1.1.3+coq8.18"
  "coq-qarith-stern-brocot.8.18.0"
  "coq-reglang.1.2.1"
  "coq-serapi.8.18.0+0.18.3"
  "coq-stalmarck.8.18.0"
  "coq-stdlib.8.18.0"
  "coq-sudoku.8.16.0"
  "coq-zorns-lemma.10.2.0"
  "coqide-server.8.18.0"
  "cppo.1.6.9"
  "csexp.1.5.2"
  "dune.3.15.0"
  "dune-build-info.3.15.0"
  "dune-configurator.3.15.0"
  "easy-format.1.3.4"
  "elpi.1.18.1"
  "menhir.20231231"
  "menhirCST.20231231"
  "menhirLib.20231231"
  "menhirSdk.20231231"
  "num.1.5"
  "ocaml.5.1.1"
  "ocaml-base-compiler.5.1.1"
  "ocaml-compiler-libs.v0.12.4"
  "ocaml-config.3"
  "ocaml-options-vanilla.1"
  "ocaml-syntax-shims.1.0.0"
  "ocamlfind.1.9.6"
  "parsexp.v0.16.0"
  "ppx_compare.v0.16.0"
  "ppx_derivers.1.2.1"
  "ppx_deriving.5.2.1"
  "ppx_deriving_yojson.3.7.0"
  "ppx_hash.v0.16.0"
  "ppx_import.1.10.0"
  "ppx_sexp_conv.v0.16.0"
  "ppxlib.0.32.0"
  "re.1.11.0"
  "result.1.5"
  "seq.base"
  "sexplib.v0.16.0"
  "sexplib0.v0.16.0"
  "stdlib-shims.0.3.0"
  "stringext.1.6.0"
  "uri.4.4.0"
  "yojson.2.1.2"
  "zarith.1.13"
]
pinned: "coq.8.18.0"
